--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -22,6 +22,7 @@
       card_view:cardPreventCornerOverlap="true" >
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/node_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
