--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -18,29 +18,33 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      card_view:cardCornerRadius="2dp"
+      card_view:cardCornerRadius="4dp"
       card_view:cardPreventCornerOverlap="true" >
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/node_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
       <TextView
           android:id="@+id/node_value_txt_view"
-          android:layout_width="match_parent"
+          android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginEnd="8dp"
           android:layout_marginStart="8dp"
           android:layout_marginTop="8dp"
-          android:lines="2"
+          android:layout_marginBottom="8dp"
           android:textAppearance="?android:textAppearanceMedium"
-          android:textColor="#000000"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintHorizontal_bias="0.0"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />
+          android:textColor="#000000" />
 
-    </android.support.constraint.ConstraintLayout>
+      <TextView
+          android:id="@+id/node_relation_txt_view"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="8dp"
+          android:layout_marginTop="8dp"
+          android:layout_marginBottom="8dp"
+          android:textAppearance="?android:textAppearanceMedium"/>
+
+    </LinearLayout>
   </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
