--- a/app/src/main/res/layout/activity_node_relations.xml
+++ b/app/src/main/res/layout/activity_node_relations.xml
@@ -19,7 +19,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nodes_relations_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/main_color">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -27,10 +28,11 @@
 
 
     <android.support.design.widget.BottomNavigationView
+        android:background="@color/bottom_view_color"
+        app:itemBackground="@color/bottom_view_color"
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemBackground="@color/colorPrimaryDark"
         app:itemTextColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav_menu" />
