--- a/app/src/main/res/layout/activity_nodes_list.xml
+++ b/app/src/main/res/layout/activity_nodes_list.xml
@@ -9,7 +9,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/nodes_list_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:background="@color/main_color" >
 
         </android.support.v7.widget.RecyclerView>
 
@@ -17,7 +18,7 @@
             android:id="@+id/fab_add_node"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             layout_anchorGravity="bottom|right|end"
             layout_anchor="@id/nodes_list_recycler"
