--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="yellow">#FFEB3B</color>
     <color name="blue">#2196F3</color>
     <color name="white">#FFFFFF</color>
+    <color name="bottom_view_color">#880E4F</color>
+    <color name="main_color">#F8BBD0</color>
 </resources>
